rtest/tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax01/Test.java
// .result=COMPILE_FAIL
public class Test {
	public interface A {
		void m() { }
	}
}